@@ -88,6 +88,7 @@ feature launcher : none valgrind : composite ;
 feature.compose <launcher>valgrind : <testing.launcher>"valgrind --tool=memcheck -v --num-callers=20 --read-var-info=yes --track-origins=yes --error-exitcode=222 --suppressions=valgrind_suppressions.txt" <use-valgrind>on ;
 
 test-suite libtorrent : 	
+	[ run test_ip_voter.cpp ]
 	[ run test_resume.cpp ]
 	[ run test_sliding_average.cpp ]
 	[ run test_socket_io.cpp ]
